--- a/index.html
+++ b/index.html
@@ -558,7 +558,7 @@
                             </div>
                             <div class="testimonial-content">
                                 <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam accumsan lacus eget velit
+                                    Floors look brand new! Quick, efficient service. Very satisfied with the results
                                 </p>
                                 <h3>Customer Name</h3>
                                 <h4>Profession</h4>
@@ -570,7 +570,7 @@
                             </div>
                             <div class="testimonial-content">
                                 <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam accumsan lacus eget velit
+                                    Stains are gone! Carpets look and smell great. Excellent, professional cleaning service!
                                 </p>
                                 <h3>Customer Name</h3>
                                 <h4>Profession</h4>
@@ -582,7 +582,7 @@
                             </div>
                             <div class="testimonial-content">
                                 <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam accumsan lacus eget velit
+                                    Desk is spotless! Great attention to detail, very happy with the cleaning service
                                 </p>
                                 <h3>Customer Name</h3>
                                 <h4>Profession</h4>
@@ -594,7 +594,7 @@
                             </div>
                             <div class="testimonial-content">
                                 <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam accumsan lacus eget velit
+                                    Fantastic job on floors, carpets, and desks! Everything looks fresh and spotless now.
                                 </p>
                                 <h3>Customer Name</h3>
                                 <h4>Profession</h4>
